# tap-mixpanel-custom

./: README.md  config.json  meltano.yml  mixpanel_custom.sh  pyproject.toml  tox.ini
.meltano/: analytics.json
.meltano/run/: bin
mixpanel_custom/: auth.py  client.py  streams.py  tap.py
mixpanel_custom/schemas/: cohorts.json  members.json
mixpanel_custom/tests/: __init__.py  test_core.py
